--- a/src/modules/students/ratings/ratings.scss
+++ b/src/modules/students/ratings/ratings.scss
@@ -52,3 +52,14 @@
     background: #A2B0FD;
   }
 }
+
+
+footer {
+  width: 100%;
+  font-size: 24px;
+  padding: 20px;
+  background: #F6F930;
+  margin-top: 20px;
+  text-align: center;
+  font-weight: bold;
+}
